Updated Flask Application, added authorization.
